# storage/api-docs/api-docs.json
@@ -5127,103 +5127,6 @@
                 }
             }
         },
-        "/questions/{id}/comments": {
-            "get": {
-                "tags": [
-                    "سوال"
-                ],
-                "summary": "ثبت نظر برای سوال",
-                "description": "",
-                "operationId": "8b8ff39ddab1db0a2739cefad49c40cc",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "شناسه سوال",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "شماره صفحه",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        },
-                        "example": 1
-                    },
-                    {
-                        "name": "perPage",
-                        "in": "query",
-                        "description": "تعداد نمایش در هر صفحه",
-                        "schema": {
-                            "type": "number"
-                        },
-                        "example": 10
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "عملیات موفق",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "سوال"
-                ],
-                "summary": "ثبت نظر برای سوال",
-                "description": "",
-                "operationId": "2c3b1e5ee61efb46f6eedb822871d94b",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "شناسه سوال",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "body"
-                                ],
-                                "properties": {
-                                    "body": {
-                                        "description": "متن",
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "عملیات موفق",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/questions/{id}/points": {
             "get": {
                 "tags": [
@@ -5972,14 +5875,14 @@
                 }
             }
         },
-        "/rahjoos/{id}/exercises/{exercise}/questions": {
+        "/rahjoos/{id}/exercise/{exercise}/questions": {
             "get": {
                 "tags": [
                     "رهجو"
                 ],
                 "summary": "لیست سوالات تمرین رهجو",
                 "description": "",
-                "operationId": "c8e2ffb99faf39d65c191723542e2c9a",
+                "operationId": "e472d4d893944e335d08639f4eebbe92",
                 "parameters": [
                     {
                         "name": "id",
@@ -6188,6 +6091,121 @@
                                     "point": {
                                         "description": "امتیاز",
                                         "type": "number"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "عملیات موفق",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/rahjoos/{id}/questions/{question}/comments": {
+            "get": {
+                "tags": [
+                    "رهجو"
+                ],
+                "summary": "رهجو دریافت نظرات سوال",
+                "description": "",
+                "operationId": "e2b347746d0e6b34f5c6f3ac1475edf2",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "شناسه رهجو",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "شناسه سوال",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "شماره صفحه",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        },
+                        "example": 1
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "تعداد نمایش در هر صفحه",
+                        "schema": {
+                            "type": "number"
+                        },
+                        "example": 10
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "عملیات موفق",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "رهجو"
+                ],
+                "summary": "ثبت نظر برای سوال",
+                "description": "",
+                "operationId": "86c89db54bdb1933ac9de123d71569e1",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "شناسه رهجو",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "question",
+                        "in": "path",
+                        "description": "شناسه سوال",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "body"
+                                ],
+                                "properties": {
+                                    "body": {
+                                        "description": "متن",
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
